[tool.poetry]
name = "noiseflow"
version = "0.0.9"
description = "An ambient noise package"
authors = ["Fu Yin <oucyinfu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
include = ["CMakeLists.txt", ".gitmodules", "noiseflow/**/*.py"]
exclude = ["noiseflow/tests/**/*"]
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Physics",
    ]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.0"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
h5py = "^3.7.0"
joblib = "^1.3.0"
tqdm = "^4.65.0"
obspy = "^1.4.0"
faker = "^18.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
autopep8 = "^1.6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.5.0"
pydata-sphinx-theme = "^0.8.1"
sphinx-autoapi = "^1.8.4"
jupyter-sphinx = "^0.3.2"
sphinx-copybutton = "^0.5.0"

[tool.poetry.extras]
cpp = ["fftw"]

[build-system]
requires = ["poetry-core", "setuptools", "cmake", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

